Hack to prevent scrollbar from distorting width
Perma-scrollbar. Not really a fix.

--- a/css/results.css
+++ b/css/results.css
@@ -1,4 +1,8 @@
-﻿#heading {
+﻿html {
+    height: 101%;
+}
+
+#heading {
     /*text-align: center;*/
 }
 
